Changelog
=========

2.1 (unreleased)
----------------

- Nothing changed yet.


2.0 (2014-07-03)
----------------

- Convert to show customisation of z3c.form-based plone.app.users.
  [lentinj, vipod, thet]

0.5 (unreleased)
----------------

- Nothing changed yet.


0.4 (2013-12-18)
----------------

- Fix gender vocabulary and translate it properly. (thet)
- Dont' overwrite existing user registration fields, just add accept and
  country. (thet) 
- Add field "birthyear" for use cases where asking for the exact birth date is
  too much. (thet)
- Using locales directory instead of i18n and general cleanup. (thet)
- Moved to github (Kees Hink)
- Added German translation (Pavel Bogdanovic, 2011-10-28).

0.3 (2010-09-26)
----------------

- Make the custom fields available only when the product is installed through
  Generic Setup, by overriding the utility in componentregistry.xml (Elizabeth
  Leddy).
- Added a metadata.xml with a profile version.

0.2 (2010-04-12)
----------------

- Override plone.app.users' adapter class, so @@personal-information will show
  the extra fields defined in this product.
  This requires plone.app.users >= 1.0b7.

0.1 (2010-02-28)
----------------

- Initial release