@@ -1,3 +1,8 @@
 include *.txt *.rst
+
+recursive-include docs *
 recursive-include collective *
+
 global-exclude *.pyc
+
+exclude bootstrap.py *.cfg *.yml *.sh
